@@ -446,6 +446,8 @@ Bug Fixes
 
 37. SOLR-604: If the spellchecking path is relative, make it relative to the Solr Data Directory.  (Shalin Shekhar Mangar via gsingers)
 
+38. SOLR-609: SpellCheckComponent now honors defaults.  (Shalin Shekhar Mangar via gsingers)
+
 Other Changes
  1. SOLR-135: Moved common classes to org.apache.solr.common and altered the
     build scripts to make two jars: apache-solr-1.3.jar and 
